--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,7 @@
 name: Backstage CDK Assets
 description: Copies Backstage catalog-info.yaml files into the CDK application prior to building
 author: https://github.com/cultureamp
+requirements: []
 configuration:
+  properties: {}
   additionalProperties: false
