--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Lint and Test
 
 on:
   pull_request:
@@ -16,3 +16,6 @@ jobs:
 
       - name: Lint
         run: docker-compose run --rm lint
+
+      - name: Test
+        run: docker-compose run --rm tests
